resources22/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: guestbook
  labels:
    app: guestbook
    tier: frontend
spec:
  ports:
  - port: 3000
  selector:
    app: guestbook
    tier: frontend
